--- a/Changes
+++ b/Changes
@@ -3,3 +3,5 @@ Revision history for Data-Random-Structure-UTF8
 0.01    Date/time
         First version, released on an unsuspecting world.
 
+0.02	2020-04-16
+	Documentation additions.
