--- a/Changes
+++ b/Changes
@@ -19,4 +19,6 @@ Revision history for Data-Random-Structure-UTF8
 	Changed minimum Perl Version to 5.8.0
 
 0.05	2020-04-16
+	Fixed a bug in _check_content_recursively() , now
+	it can handle SCALAR refs.
 	Removed some external module dependencies.
